--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,5 @@
 PORT=8080
 DB_URI=""
-JWT_SECRET=
+JWT_SECRET="golden armor warrior"
 EMAIL_SENDER_ADDRESS="petpalgoldenarmorwarrior@gmail.com"
 EMAIL_SENDER_PASSWORD="bxnx donw oisd leqe"
