--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,12 @@ services:
       dockerfile: Dockerfile
     container_name: petpal_backend
     restart: unless-stopped
-    volumes:
-      - ./src:/app/src
     ports:
-      - 8080:8080
+      - 8088:8088
   ga_db:
     image: mongo
     container_name: ga-mongo_db
-    restart: always
+    restart: unless-stopped
     ports:
       - 27017:27017
     environment:
@@ -23,7 +21,7 @@ services:
       - mongo_local_temp:/data/db
   ga_db-client:
     image: mongo-express
-    restart: always
+    restart: unless-stopped
     ports:
       - 8081:8081
     environment:
