--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    networks:
+      - golden-network
     container_name: petpal_backend
     restart: unless-stopped
     ports:
@@ -12,6 +14,8 @@ services:
     image: mongo
     container_name: ga-mongo_db
     restart: unless-stopped
+    networks:
+      - golden-network
     ports:
       - 27017:27017
     environment:
@@ -22,6 +26,8 @@ services:
   ga_db-client:
     image: mongo-express
     restart: unless-stopped
+    networks:
+      - golden-network
     ports:
       - 8081:8081
     environment:
@@ -32,3 +38,5 @@ services:
       - ga_db
 volumes:
   mongo_local_temp:
+networks:
+  golden-network:
